<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_orange"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/saluto"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/introString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/info_intro1"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/info_intro2"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/numero_segreto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/string_result"
        android:textAlignment="center"
        android:textSize="70sp" />

    <EditText
        android:id="@+id/inputUtente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Inserisci un numero"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        app:backgroundTint="@color/button_brown" />

    <TextView
        android:id="@+id/resultCheckString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/help"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/play_again"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/yes_play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/play_again_yes"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_green_dark" />

    <Button
        android:id="@+id/no_play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/pplay_again_no"
        android:visibility="invisible"
        app:backgroundTint="@color/design_default_color_error" />

</LinearLayout>